first commit: deleted the unecessary files boilerplated by CRA and added the redux dependencies for react

--- a/package.json
+++ b/package.json
@@ -39,5 +39,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.21",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-saga": "^0.10.5",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3"
   }
 }
