--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/redux-saga": "^0.10.5",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3"
   }
