--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@types/react-redux": "^7.1.21",
 		"@types/redux-logger": "^3.0.9",
 		"@types/redux-saga": "^0.10.5",
+		"axios": "^0.24.0",
 		"husky": "^7.0.4",
 		"prettier": "^2.5.1",
 		"pretty-quick": "^3.1.3",
