--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"prettier": "^2.5.1",
 		"pretty-quick": "^3.1.3",
 		"react-redux": "^7.2.6",
+		"react-router-dom": "^6.2.1",
 		"redux": "^4.1.2",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-logger": "^3.0.6",
