--- a/package.json
+++ b/package.json
@@ -49,6 +49,13 @@
 		"@types/react-redux": "^7.1.21",
 		"@types/redux-logger": "^3.0.9",
 		"@types/redux-saga": "^0.10.5",
+		"@types/workbox-cacheable-response": "^4.3.1",
+		"@types/workbox-core": "^4.3.1",
+		"@types/workbox-expiration": "^4.3.1",
+		"@types/workbox-precaching": "^4.3.1",
+		"@types/workbox-routing": "^4.3.1",
+		"@types/workbox-strategies": "^4.3.1",
+		"@types/workbox-window": "^4.3.4",
 		"axios": "^0.24.0",
 		"husky": "^7.0.4",
 		"prettier": "^2.5.1",
@@ -58,6 +65,13 @@
 		"redux": "^4.1.2",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-logger": "^3.0.6",
-		"redux-saga": "^1.1.3"
+		"redux-saga": "^1.1.3",
+		"workbox-cacheable-response": "^6.4.2",
+		"workbox-core": "^6.4.2",
+		"workbox-expiration": "^6.4.2",
+		"workbox-precaching": "^6.4.2",
+		"workbox-routing": "^6.4.2",
+		"workbox-strategies": "^6.4.2",
+		"workbox-window": "^6.4.2"
 	}
 }
